[DROOLS-5491] Fixed as per SONAR suggestions